--- a/styles/moon-sun.css
+++ b/styles/moon-sun.css
@@ -1,9 +1,10 @@
 #moon-sun-widget {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 50px;
+  left: 50px;
   font-size: 32px;
-  cursor: pointer;
-  user-select: none;
+  background: white;
+  padding: 10px;
+  border-radius: 5px;
   z-index: 1000;
 }
