--- a/styles/moon-sun.css
+++ b/styles/moon-sun.css
@@ -1,10 +1,13 @@
 #moon-sun-widget {
   position: absolute;
-  top: 50px;
-  left: 50px;
+  top: 10px;
+  right: 10px;
   font-size: 32px;
   background: white;
-  padding: 10px;
+  padding: 5px;
   border-radius: 5px;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  user-select: none;
   z-index: 1000;
 }
